Implement ReportService.parse and create flat model
