# src/models/flattenedEnrollment.ts
@@ -1,0 +1,30 @@
+export interface FlattenedEnrollment {
+  sasid?: number;
+  name?: string;
+  dateOfBirth?: Date;
+  birthCertificateId?: string;
+  townOfBirth?: string;
+  stateOfBirth?: string;
+  race?: string;
+  ethnicity?: string;
+  gender?: string;
+  receivingSpecialEducationServices?: boolean;
+  specialEducationServicesType?: string;
+  address?: string;
+  livesWithFosterFamily?: boolean;
+  experiencedHomelessnessOrHousingInsecurity?: boolean;
+  householdSize?: number;
+  annualHouseholdIncome?: number;
+  incomeDeterminationDate?: Date;
+  enrollmentStartDate?: Date;
+  enrollmentEndDate?: Date;
+  enrollmentExitReason?: string;
+  firstFundingPeriod?: string;
+  lastFundingPeriod?: string;
+  site?: string;
+  ageGroup?: string;
+  fundingType?: string;
+  spaceType?: string;
+  model?: string;
+  receivingCareForKids?: boolean;
+}
